gf_core web - sys_release_info z-index fixed

--- a/web/src/gf_core/css/gf_sys_release_info.css
+++ b/web/src/gf_core/css/gf_sys_release_info.css
@@ -9,7 +9,7 @@
 	padding-top     : 6px;
 	padding-right   : 5px;
 	padding-bottom  : 3px;
-	z-index         : 5000;
+	z-index         : 10;
 	width:   45px;
 	height:  22px;
 	opacity: 0.5;
